# snakemake-interface-logger-plugins

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  release.yml  test.yml
src/snakemake_interface_logger_plugins/: __init__.py  base.py  common.py  events.py  settings.py  tests.py
src/snakemake_interface_logger_plugins/registry/: __init__.py  plugin.py
tests/: tests.py
