[project]
name = "snakemake-interface-logger-plugins"
version = "0.1.0"
description = "Logger plugin interface for snakemake"
authors = [{name = "Cade Mirchandani"}, {name = "Christopher Tomkins-Tinch"}, {name = "Johannes Köster"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snakemake-interface-common>=1.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
