[project]
name = "snakemake-interface-logger-plugins"
version = "1.2.5"
description = "Logger plugin interface for snakemake"
authors = [
    { name = "Cade Mirchandani" },
    { name = "Christopher Tomkins-Tinch" },
    { name = "Johannes Köster" },
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = ["snakemake-interface-common>=1.17.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
snakemake-interface-logger-plugins = { path = ".", editable = true }

[tool.pixi.environments]
dev = { features = ["dev"] }
publish = { features = ["publish"] }

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3.5,<9"
ruff = ">=0.10.0,<0.11"
mypy = ">=1.15.0,<2"
pytest-cov = ">=6.0.0,<7"

[tool.pixi.feature.dev.pypi-dependencies]
snakemake-interface-common = { git = "https://github.com/snakemake/snakemake-interface-common.git" }

[tool.mypy]
ignore_missing_imports = true # Temporary until https://github.com/snakemake/snakemake-interface-common/pull/55
disallow_untyped_defs = true
warn_no_return = true

[tool.pixi.feature.dev.tasks]
format = "ruff format src"
lint = "ruff check"
type-check = "mypy src/"
qc = { depends-on = ["format", "lint", "type-check"] }

[tool.pixi.feature.dev.tasks.test]
cmd = [
  "pytest",
  "--cov=snakemake_interface_logger_plugins",
  "--cov-report=xml:coverage-report/coverage.xml",
  "--cov-report=term-missing",
  "tests/tests.py"
]


# Publish
[tool.pixi.feature.publish.dependencies]
twine = ">=6.1.0,<7"
python-build = ">=1.2.2,<2"

[tool.pixi.feature.publish.tasks]
build = { cmd = "python -m build", description = "Build the package into the dist/ directory" }
check-build = { cmd = "python -m twine check dist/*", depends-on = [
  "build",
], description = "Check that the package can be uploaded" }
